--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-<head></head>
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
+<h1>Hellow!</h1>
 </body>
 </html>
